# self_ksh

./: .gitignore  DAILY_REPORT_SETUP.md  MOBILE_APP_SETUP.md  MOBILE_APP_SUMMARY.md  db.sqlite3  env  manage.py  package-lock.json  pyproject.toml  send_daily_report.bat
admin_panel/: apps.py  scheduler.py  views.py
admin_panel/management/commands/: send_daily_report.py
admin_panel/templates/admin_panel/: cash_receipt.html  dashboard.html  debit_credit_receipt.html  inventory.html  login.html  members.html  patronage.html  refund.html  refund_receipt.html  transactions.html  user_choice.html  user_transactions.html
coop_kiosk/: asgi.py  settings.py  urls.py  wsgi.py
inventory/: admin.py  models.py
inventory/management/commands/: populate_data.py
inventory/migrations/: 0001_initial.py  0002_product_expiration_date.py  0003_remove_expiration_date.py
kiosk/: views.py
kiosk/templates/kiosk/: kiosk.html
members/: admin.py  models.py  views.py
members/migrations/: 0001_initial.py  0002_member_pin_hash.py
mobile_api/: serializers.py  urls.py  views.py
mobile_app/: .gitignore  App.js  BUILD_APK_GUIDE.md  CONNECTION_TROUBLESHOOTING.md  README.md  app.json  clear-cache.js  config.js  metro.config.js  package-lock.json  package.json
mobile_app/constants/: colors.js
mobile_app/screens/: HomeScreen.js  LoginScreen.js  TransactionsScreen.js
mobile_app/services/: api.js
transactions/: admin.py  models.py
transactions/migrations/: 0001_initial.py  0002_transactionitem_vat_amount.py  0003_transaction_vatable_sale.py  0004_transactionitem_vatable_sale.py
(+1 files in other folders)
